--- a/resources/styles.css
+++ b/resources/styles.css
@@ -73,7 +73,7 @@ body {
 
 .carousel-caption h3 {
     font-size: 2em;
-    margin-top: 650px;
+    /* margin-top: 650px; */
     padding: 20px;
     /* background: rgba(0, 0, 0, 0.5); */
     border-radius: 5px;
