--- a/resources/styles.css
+++ b/resources/styles.css
@@ -276,7 +276,7 @@ header.scrolled {
   overflow: hidden;
   border-radius: 8px;
   color: #fff;
-  background: linear-gradient(90deg, #201236 0%, rgba(95, 83, 114, 0) 90.92%);
+  background: linear-gradient(90deg, rgb(18, 31, 54) 0%, rgba(83, 88, 114, 0) 90.92%);
   position: relative;
   min-height: 80vh;
   background-size: cover !important;
@@ -315,8 +315,9 @@ header.scrolled {
 }
 
 .description-content h2 { margin: 0 0 8px; font-size: 2em; }
+.description-content h4,
 .description-content h3 {
-  margin: 0 0 12px;
+  /* margin: 0 0 12px; */
   font-size: 1.2em;
   font-weight: normal;
   opacity: 0.9;
