--- a/slide/style.css
+++ b/slide/style.css
@@ -1,5 +1,5 @@
 :root {
-  --page-bg: #0b0b0b;
+  --page-bg: rgb(37, 37, 37);
   --text: #f4f4f4;
   --muted: #cfcfcf;
   --brand: rgb(255, 45, 85);
@@ -18,8 +18,10 @@ html, body {
 }
 
 body { 
-  margin: 0; font-family: Inter, system-ui, Segoe UI, Roboto, Arial, sans-serif; 
-  background: var(--page-bg); color: var(--text); 
+  margin: 0; 
+  font-family: Inter, system-ui, Segoe UI, Roboto, Arial, sans-serif; 
+  background: var(--page-bg); 
+  color: var(--text); 
 }
 
 .wrapper { 
@@ -32,10 +34,10 @@ body {
 
 .slider {
   position: relative;
-  width: min(1200px, 100%);
-  height: min(70vw, 560px);
+    width: 100%;
+    max-height: 800px;
   margin: 24px auto;
-  border-radius: 16px;
+  /* border-radius: 16px; */
   overflow: hidden;
   background: #000;
   box-shadow: var(--shadow);
@@ -346,7 +348,8 @@ body {
   position: absolute;
   top: 0;
   bottom: 0;
-  width: 74px;
+  width: 200px;
+  font-size: 50px;
   background: transparent;
   border: none;
   /* backdrop-filter: blur(3px); */
@@ -422,19 +425,10 @@ body {
   overflow: hidden;
   z-index: 5;
 }
+
 .progress-bar {
   height: 100%;
   width: 0%;
   background: var(--brand);
   transition: none;
-}
-
-@media (max-width: 720px) {
-  .actions { 
-  flex-wrap: wrap; 
-  }
-
-  .brand-title { 
-  font-size: clamp(36px, 12vw, 66px); 
-  }
 }
